--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,8 +2,8 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">10.0.2.2</domain>
-
         <domain includeSubdomains="true">192.168.2.72</domain>
+        <domain includeSubdomains="true">api.carsmarobe.es</domain>
     </domain-config>
 
     <base-config cleartextTrafficPermitted="true" />
